refactor: change answersJson type from String to JsonNode in request and response models